--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="carousel-item" style="background-image: url('img/Carousel_15.jpg')"q>
               <div class="carousel-caption d-none d-md-block">
                 <h1><b><font color="gold">EXPERIENCE</font></b></h1>
-                <h1><b><font color="gold">Experience the difference with quick automated decisions.</font></b></h1>
+                <h1><b><font color="gold">Experience decisions at the speed of light.</font></b></h1>
               </div>
             </div>
 
